Mr Hyde was here …

--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,7 @@
 title: Lotes' lab
 description: This is my blog. There are many blogs, but this blog is mine.
 show_downloads: false
-markdown: redcarpet
-redcarpet:
-  extensions:
-    - no_intra_emphasis
-    - fenced_code_blocks
-    - autolink
-    - tables
-    - strikethrough
-    - superscript
-    - with_to_data
+markdown: kramdown
 google_analytics:
 exclude:
   - README.md
